# particle-collision-optimization

./: .gif_constraints  .gitignore  CMakeLists.txt  README.md  bouncing_balls  imgui.ini  main.cpp  run  run.sh  stb_image_write.h
.cache/clangd/index/: Constants.h.9D26FC169492DBE0.idx  Particle.h.18010EBB2573B67A.idx  ParticleSystem.cpp.5AC33FE6FF897299.idx  ParticleSystem.h.9ADB29CBF543CE56.idx  Recorder.cpp.2DB33D7457FF5F49.idx  Recorder.h.3F064588A5ADA1FD.idx  Utils.cpp.0FCCF73C5D81DA61.idx  Utils.h.C19731C4179D3276.idx  main.cpp.897158A44A9353F6.idx  stb_image_write.h.A6F442FFEECBEA97.idx
include/: CommandLineArguments.h  Constants.h  Logging.h  Particle.h  ParticleSystem.h  ParticleSystemApp.h  Recorder.h  RecordingTool.h  Utils.h  stb_image_write.h
src/: CommandLineArguments.cpp  Logging.cpp  ParticleSystem.cpp  ParticleSystemApp.cpp  Recorder.cpp  RecordingTool.cpp  Utils.cpp  main.cpp
